# ai-secrets-scanner

./: CHANGELOG.md  README.md  main.py  pyproject.toml
tests/: test_cli.py
