[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-secrets-scanner"
version = "1.0.0"
description = "AI-powered secrets scanner: detects hardcoded API keys, credentials, and sensitive data in source code."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-secrets-scanner = "ai_secrets_scanner.main:cli"

[tool.setuptools.packages.find]
include = ["ai_secrets_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
